tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_float.py
# pylint: disable=missing-function-docstring, missing-module-docstring
@types('float', 'float')
def compare_is_float(a, b):
    return a is b
